objects/MaritzCX__ALG_Metric__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting is used to manage the configuration for Key Metrics.</description>
    <fields>
        <fullName>MaritzCX__Color1__c</fullName>
        <defaultValue>&quot;red_img&quot;</defaultValue>
        <description>This field is used to determine the color on charts &amp; bar fields on response</description>
        <label>Color1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Color2__c</fullName>
        <defaultValue>&quot;yellow_img&quot;</defaultValue>
        <description>This field is used to determine the color on charts &amp; bar fields on response</description>
        <label>Color2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Color3__c</fullName>
        <defaultValue>&quot;green_img&quot;</defaultValue>
        <description>This field is used to determine the color on charts &amp; bar fields on response</description>
        <label>Color3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Configured_Charts_On_Account__c</fullName>
        <defaultValue>&apos;k1;k2;k3;k4;k5;k6&apos;</defaultValue>
        <description>The field is used to store the order of charts to display on Account Page.</description>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Configured Charts On Account[DEPRECATED]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Configured_Charts_On_Contact__c</fullName>
        <defaultValue>&apos;k1;k2;k3;k4;k5;k6&apos;</defaultValue>
        <description>The field is used to store the order of charts to display on Contact Page.</description>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Configured Charts On Contact[DEPRECATED]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Configured_Charts_On_Lead__c</fullName>
        <defaultValue>&apos;k1;k2;k3;k4;k5;k6&apos;</defaultValue>
        <description>The field is used to store the order of charts to display on Lead Page.</description>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Configured Charts On Lead[DEPRECATED]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Configured_Columns__c</fullName>
        <defaultValue>&apos;1;2;7;3;4;5;6;&apos;</defaultValue>
        <description>The field is used to store the order of columns to display on Response List.</description>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Configured Columns[DEPRECATED]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Configured_Columns_on_Feedback__c</fullName>
        <defaultValue>&apos;1;10;2;3;4;5;11;6;7;8;9;&apos;</defaultValue>
        <description>The field is used to store the order of columns to display on Customer Feedback tab.</description>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Configured Columns on Feedback[DEP]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Configured_Columns_on_ResponseDetail__c</fullName>
        <defaultValue>&apos;1;2;3;4;&apos;</defaultValue>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>ConfiguredColumnsOnResponseDetail[DEP]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Configured_Questions_on_Account__c</fullName>
        <defaultValue>&apos;k1;k2;k3;k4;k5;k6;m1;m2;m3;m4;m5;m6;m7;m8;c1;c2&apos;</defaultValue>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Configured Questions on Account[DEP]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Configured_Questions_on_Case__c</fullName>
        <defaultValue>&apos;k1;k2;k3;k4;k5;k6;m1;m2;m3;m4;m5;m6;m7;m8;c1;c2&apos;</defaultValue>
        <label>Configured Questions on Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Configured_Questions_on_Contact__c</fullName>
        <defaultValue>&apos;k1;k2;k3;k4;k5;k6;m1;m2;m3;m4;m5;m6;m7;m8;c1;c2&apos;</defaultValue>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Configured Questions on Contact[DEP]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Configured_Questions_on_Feedback__c</fullName>
        <defaultValue>&apos;k1;k2;k3;k4;k5;k6;m1;m2;m3;m4;m5;m6;m7;m8;c1;c2&apos;</defaultValue>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Configured Questions on Feedback[DEP]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Configured_Questions_on_Lead__c</fullName>
        <defaultValue>&apos;k1;k2;k3;k4;k5;k6;m1;m2;m3;m4;m5;m6;m7;m8;c1;c2&apos;</defaultValue>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Configured Questions on Lead[DEPRECATED]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Configured_Questions_on_Survey__c</fullName>
        <defaultValue>&apos;k1;k2;k3;k4;k5;k6;m1;m2;m3;m4;m5;m6;m7;m8;c1;c2&apos;</defaultValue>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Configured Questions on Survey[DEP]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM1_Goal__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Key Metric 1- Goal[DEPRECATED]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM1_Max__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Key Metric 1- Max[DEPRECATED]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM1_Min__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Key Metric 1- Min[DEPRECATED]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM2_Goal__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Key Metric 2- Goal[DEPRECATED]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM2_Max__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Key Metric 2- Max[DEPRECATED]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM2_Min__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Key Metric 2- Min[DEPRECATED]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM3_Goal__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Key Metric 3- Goal[DEPRECATED]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM3_Max__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Key Metric 3- Max[DEPRECATED]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM3_Min__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Key Metric 3- Min[DEPRECATED]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Key_Metric_1_Chart__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Key Metric 1 Chart[DEPRECATED]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Key_Metric_2_Chart__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Key Metric 2 Chart[DEPRECATED]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Key_Metric_3_Chart__c</fullName>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Key Metric 3 Chart[DEPRECATED]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Range1__c</fullName>
        <defaultValue>60</defaultValue>
        <description>This field is used to determine the color on charts &amp; bar fields on response.</description>
        <label>Range1</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Range2__c</fullName>
        <defaultValue>80</defaultValue>
        <description>This field is used to determine the color on charts &amp; bar fields on response.</description>
        <label>Range2</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Time_Trend__c</fullName>
        <label>Time Trend</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>3. MaritzCX: Configuration Settings</label>
</CustomObject>